--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "angular-mocks": "^1.6.6",
     "angular-resource": "^1.6.6",
     "browserify": "^14.5.0",
+    "html-react-parser": "^0.4.1",
+    "htmltojsx": "^0.3.0",
     "jasmine": "^2.8.0",
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
@@ -72,6 +74,7 @@
   },
   "dependencies": {
     "@types/angular": ">=1.5",
+    "@types/htmltojsx": "0.0.29",
     "@types/lodash.frompairs": "^4.0.3",
     "angular": ">=1.5.11",
     "lodash.frompairs": "^4.0.1",
